# fbhc2017

./: CMakeLists.txt  README.md
include/paiv/: backtrack.hpp  hash_tuple.hpp  parse_input.hpp  types.hpp
qualification/: CMakeLists.txt
qualification/fighting-zombie/: CMakeLists.txt  dnd.hpp  main.cpp  problem.cpp  unity.cpp
qualification/fighting-zombie/input/: fighting_the_zombie_input.txt  fighting_the_zombie_output.txt
qualification/fighting-zombie/tests/: generate.py
qualification/lazy-loading/: CMakeLists.txt  problem.cpp  unity.cpp
qualification/lazy-loading/input/: lazy_loading_input.txt  lazy_loading_output.txt
qualification/lazy-loading/tests/: generate.py
qualification/progress-pie/: CMakeLists.txt  main.cpp  problem.cpp  unity.cpp
qualification/progress-pie/input/: progress_pie_input.txt  progress_pie_output.txt
qualification/progress-pie/tests/: 02_input.txt  02_output.txt
round1/: CMakeLists.txt
round1/task1/: CMakeLists.txt  main.cpp
round1/task1/input/: submission_output.txt
round1/task1/tests/: runner.py.in
round1/task2/: CMakeLists.txt  main.cpp
round1/task2/input/: fighting_the_zombies_input.txt  submission_output.txt
round1/task2/tests/: 01_test_input.txt  generate.py
round1/task3/: CMakeLists.txt  main.cpp  main1.cpp
round1/task3/input/: manic_moving_input.txt
round1/task3/tests/: 01_test_input.txt  01_test_output.txt  debug_input.txt  generate.py
round1/task4/: CMakeLists.txt  main.cpp
round1/tops/1jonathan/: beach_umbrellas_source.txt  fighting_the_zombies_source.txt  manic_moving_source.txt  pie_progress_source.txt
round1/tops/2ivan/: beach_umbrellas_source.txt  fighting_the_zombies_source.txt  manic_moving_source.txt  pie_progress_source.txt
round1/tops/3chanmin/: beach_umbrellas_source.txt  fighting_the_zombies_source.txt  manic_moving_source.txt  pie_progress_source.txt
round1/tops/4antonio/: beach_umbrellas_source.txt  fighting_the_zombies_source.txt  manic_moving_source.txt  pie_progress_source.txt
round1/tops/5alexey/: beach_umbrellas_source.txt  fighting_the_zombies_source.txt  manic_moving_source.txt  pie_progress_source.txt
round1/tops/6roman/: beach_umbrellas_source.txt  (+3 more)
(+4 files in other folders)
